--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         let date = dateTime.toLocaleDateString();
         let time = dateTime.toLocaleTimeString();
         document.getElementById("datum").textContent = date;
-        document.getElementById("uhrzeit").textContent = date;
+        document.getElementById("uhrzeit").textContent = time;
         console.log("aktualisiert");
       }
       updateData();
