--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <script src="https://widget-api.fupa.net/vendor/widget.js?v1"></script>
 
     <script>
-      let todaysGuest = "a"; // heutiger Gast
+      let todaysGuest = "A"; // heutiger Gast
       let match = {
         formattedDate: "",
         homeTeam: "",
@@ -61,6 +61,8 @@
             "Heute begrüßen wir den " + todaysGuest + " als Gast";
         }
       }
+
+      setGreeting(todaysGuest);
       function getLastMatches() {}
 
       function getMatchDetails() {}
