--- a/public/index.html
+++ b/public/index.html
@@ -43,15 +43,16 @@
 
     <script>
       let todaysGuest = "A"; // heutiger Gast
+
       let match = {
-        formattedDate: "",
-        homeTeam: "",
-        awayTeam: "",
-        homeGoals: [{ minute: 0, goalscorer: "" }],
-        awayGoals: [{ minute: 0, goalscorer: "" }],
+        formattedDate: "250808",
+        homeTeam: "Heimteam",
+        awayTeam: "Auswärtsteam",
+        homeGoals: [{ minute: 45, additional: 2, goalscorer: "Heimtor" }],
+        awayGoals: [{ minute: 76, additional: 0, goalscorer: "Auswärtstor" }],
       };
 
-      let lastMatches; // Map mit allen letzten Spiele, Datum als Schluessel
+      let matchMap = new Map(); // Map mit allen letzten Spiele, Datum als Schluessel
 
       function setGreeting(todaysGuest) {
         let greeting = document.getElementById("greeting");
@@ -65,7 +66,40 @@
       setGreeting(todaysGuest);
       function getLastMatches() {}
 
-      function getMatchDetails() {}
+      function getMatchDetails(date) {
+        const data = match;
+
+        // POST-Request senden
+        fetch("/api/match", {
+          method: "POST", // HTTP-Methode
+          headers: {
+            "Content-Type": "application/json", // Header für JSON-Daten
+          },
+          body: JSON.stringify(data), // Daten in JSON umwandeln
+        })
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Fehler beim Senden der Daten");
+            }
+            return response.json(); // Antwort als JSON parsen
+          })
+          .then((responseData) => {
+            console.log("Erfolg:", responseData);
+          })
+          .catch((error) => {
+            console.error("Fehler:", error);
+          });
+      }
+
+      function formatDate(dateToFormat) {
+        return (
+          dateToFormat.getFullYear().toString().slice(-2) +
+          (dateToFormat.getMonth() + 1 < 10 ? "0" : "") +
+          (dateToFormat.getMonth() + 1).toString() +
+          (dateToFormat.getDate() < 10 ? "0" : "") +
+          dateToFormat.getDate().toString()
+        );
+      }
 
       function updateData() {
         // hole Daten vom Server
@@ -92,13 +126,8 @@
           (dateTime.getDate() < 10 ? "0" : "") + dateTime.getDate().toString()
         );
 
-        let todayAsformattedDate =
-          "" +
-          dateTime.getFullYear().toString().slice(-2) +
-          (dateTime.getMonth() + 1 < 10 ? "0" : "") +
-          (dateTime.getMonth() + 1).toString() +
-          (dateTime.getDate() < 10 ? "0" : "") +
-          dateTime.getDate().toString();
+        let todayAsformattedDate = formatDate(dateTime);
+        getMatchDetails(todayAsformattedDate);
 
         console.log("todayAsformattedDate: " + todayAsformattedDate);
         console.log("aktualisiert");
