--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,31 @@
           });
       }
 
+      function postData(blabla) {
+        let data = {};
+        // POST-Request senden
+        fetch("/api", {
+          method: "POST", // HTTP-Methode
+          headers: {
+            "Content-Type": "application/json", // Header für JSON-Daten
+          },
+          body: JSON.stringify(data), // Daten in JSON umwandeln
+        })
+          .then((response) => {
+            console.log("Response: ", response);
+            if (!response.ok) {
+              throw new Error("Fehler beim Senden der Daten");
+            }
+            return response.json(); // Antwort als JSON parsen
+          })
+          .then((responseData) => {
+            console.log("Erfolg:", responseData);
+          })
+          .catch((error) => {
+            console.error("Fehler:", error);
+          });
+      }
+
       function updateDateTime() {
         if (matches.length == 0) {
           let hrefs = document.querySelectorAll('a[href*="match"]');
@@ -198,6 +223,8 @@
           });
           console.log("matches: ", hrefArray);
           matches = hrefArray;
+
+          postData();
         }
 
         let dateTime = new Date();
